1. Add Expansion description

--- a/src/assets/documents/components/expansionpanel.html
+++ b/src/assets/documents/components/expansionpanel.html
@@ -1,4 +1,123 @@
-<html><head></head><body>
-  <h1>Expansion Panel</h1>
-  <div app-docs-example="expansion-panel-basic"></div>
-</body></html>
+<html>
+
+<head></head>
+
+<body>
+  <div class="doc-category-title">
+    Layout
+    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
+  </div>
+  <div class="doc-title-1">
+    Expansion Panel
+  </div>
+  <div class="doc-desc-1">
+    Expansion Panels contain creation flows and allow lightweight editing of an element.
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Examples
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
+  </div>
+  <div class="doc-desc-2">
+    Each expansion-panel must include a header and may optionally include an action bar.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="expansion-panel-basic"></div>
+  </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Props
+    <span class="docs-markdown-h3" id="props">
+      <span header-link="props"></span>Props</span>
+  </div>
+  <div class="doc-desc-2">
+    To get a customized checkbox, just set
+    <span class="doc-desc-2-highlight">type/state/disabled</span>
+  </div>
+  <table class="doc-props-table">
+    <thead>
+      <tr>
+        <th>property</th>
+        <th>description</th>
+        <th>type</th>
+        <th>default</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>ghost</td>
+        <td>make background transparent and invert text and border colors</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+      <tr>
+        <td>disabled</td>
+        <td>disabled state of button</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Best Practice
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
+  </div>
+
+  <div class="doc-desc-2">
+    Expansion panels provides extra infomration in details-summary view of its header, that’s easy to scan, so that users can
+    look for patterns and insights.
+  </div>
+
+
+  <div class="doc-desc-2">
+    Expansion panels should:
+    <ul class="doc-list">
+      <li>Focused: Expansion panels focus user attention to ensure their content is addressed.</li>
+      <li>Direct: Expansion panels should be direct in communicating information and dedicated to completing a task, allow lightweight
+        editing of an element.</li>
+    </ul>
+  </div>
+
+  <div class="doc-divider"></div>
+
+  <div class="doc-title-2">
+    Usage & Content guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content guidelines</span>
+  </div>
+  <div class="doc-desc-2">
+    As for expanded rows, use grey background colof with top and bottom shadows to distinguish from main rows.
+  </div>
+  <div style="margin-bottom:24px">
+    <div class="docs-usage-do">
+      <div style="width: 100%; height: 352px" class="docs-usage-center">
+        <img style="width: 432px; height: 230px" class="expansionpanel-usage" src="assets/img/doc/expansionpanel-pic-1.png" alt="">
+      </div>
+    </div>
+    <div class="docs-usage-dont docs-mt16" >
+        <div style="width: 100%; height: 352px" class="docs-usage-center">
+          <img style="width: 432px; height: 230px" class="expansionpanel-usage" src="assets/img/doc/expansionpanel-pic-2.png" alt="">
+        </div>
+      </div>
+
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Design specs
+    <span class="docs-markdown-h3" id="design_specs">
+      <span header-link="design_specs"></span>Design specs</span>
+  </div>
+
+  <img class="doc-spec" src="assets/img/doc/expansionpanel-spec.png" alt="">
+
+  <div class="doc-divider"></div>
+</body>
+
+
+
+</html>
