--- a/libs/style.scss
+++ b/libs/style.scss
@@ -258,5 +258,7 @@ td.mat-cell, .mat-header-cell {
       color: #7f5eba !important;
     }
   }
-  
 }
+// .material-icons.material-icons--outline {
+//   font-family: 'Material Icons Outline';
+// }
