--- a/src/document.scss
+++ b/src/document.scss
@@ -58,8 +58,8 @@
 .doc-example-container {
   /* Rectangle 3: */
   background: #ffffff;
-  border: 1px solid #efefef;
-  height: 280px;
+  // border: 1px solid #efefef;
+  // height: 280px;
 }
 .doc-props-table {
   border-collapse: collapse;
