--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
       [active]="rla4.isActive">
       <span class="tab-item">DOCUMENTATION</span>
     </a>
-    <a mat-button color="primary" target="_blank" class="github-link" routerLink="https://github.com/greycats/vizient-toolkit">VIEW ON GITHUB</a>
+    <a mat-button color="primary" target="_blank" class="github-link" href="https://github.com/greycats/vizient-toolkit">VIEW ON GITHUB</a>
   </nav>
 </viz-header>
 <div class="main-sec">
