1. update compoents description

--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -5,6 +5,8 @@
 <body>
   <div class="doc-category-title">
     Button & Indicatiors
+    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
     Button
@@ -15,7 +17,9 @@
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    Example
+    Examples
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
     Used most in the interface. Only use another style if a button requires more or less visual weight.
@@ -27,6 +31,8 @@
   </div>
   <div class="doc-title-2">
     Props
+    <span class="docs-markdown-h3" id="props">
+      <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
     To get a customized checkbox, just set
@@ -58,7 +64,9 @@
   </table>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    Best Practice
+    Best Practices
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
   <div class="doc-desc-2">
@@ -81,39 +89,40 @@
 
   <div class="doc-title-2">
     Usage & Content guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
   <div class="doc-desc-2">
     Buttons should be clear and predictable—data analyst should be able to anticipate what will happen when they click a button.
     Never deceive them by mislabeling a button.
   </div>
   <div style="margin-bottom:24px">
-    <img class="checkbox-usage"
-         src="assets/img/doc/button-predicable-do.png"
-         alt="">
-    <img class="checkbox-usage"
-         src="assets/img/doc/button-predicable-dont.png"
-         alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img height="36px" width="149px" src="assets/img/doc/button-predicable-do.png" alt="">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img height="36px" width="73px" src="assets/img/doc/button-predicable-dont.png" alt="">
+    </div>
   </div>
   <div class="doc-desc-2">
     Don’t wrap text. For maximum legibility, a text label should remain on a single line.
   </div>
   <div style="margin-bottom:24px">
-    <img src="assets/img/doc/button-singleline-do.png"
-         class="checkbox-usage"
-         alt="">
-    <img src="assets/img/doc/button-singleline-dont.png"
-         class="checkbox-usage"
-         style="margin-left:24px"
-         alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="149px" height="36px" src="assets/img/doc/button-singleline-do.png" alt="">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="104px" height="54px" src="assets/img/doc/button-singleline-dont.png" alt="">
+    </div>
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Design specs
+    <span class="docs-markdown-h3" id="design_specs">
+      <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <img class="doc-spec"
-       src="assets/img/doc/button-spec.png"
-       alt="">
+  <img class="doc-spec" src="assets/img/doc/button-spec.png" alt="">
 
 
   <div class="doc-divider">
