--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -89,12 +89,12 @@
   </div>
 
   <div style="margin-bottom:24px">
-    <img class="checkbox-usage"
-         src="assets/img/doc/checkbox-capital-ok.png"
-         alt="">
-    <img class="checkbox-usage"
-         src="assets/img/doc/checkbox-capital-fail.png"
-         alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="130" height="40" src="assets/img/doc/checkbox-capital-ok.png" alt="">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="120" height="40" src="assets/img/doc/checkbox-capital-fail.png" alt="">
+    </div>
   </div>
 
 
@@ -103,13 +103,12 @@
   </div>
 
   <div style="margin-bottom:24px">
-    <img src="assets/img/doc/checkbox-list-do.png"
-         class="checkbox-usage"
-         alt="">
-    <img src="assets/img/doc/checkbox-list-dont.png"
-         class="checkbox-usage"
-         style="margin-left:24px"
-         alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="169" height="120" src="assets/img/doc/checkbox-list-do.png" alt="">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="251" height="120" src="assets/img/doc/checkbox-list-dont.png" alt="">
+    </div>
   </div>
 
   <div class="doc-divider">
@@ -121,7 +120,7 @@
     <span class="docs-markdown-h3" id="design_specs"><span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <img src="assets/img/doc/checkbox-design.svg"
+  <img class="doc-spec" src="assets/img/doc/checkbox-design.svg"
        alt="">
 
 
