--- a/src/assets/documents/components/chip.html
+++ b/src/assets/documents/components/chip.html
@@ -5,6 +5,8 @@
 <body>
   <div class="doc-category-title">
     Button & Indicatiors
+    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
     Chip
@@ -15,6 +17,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
     Chip displays a list of values as individual, keyboard accessible
@@ -26,6 +30,8 @@
   </div>
   <div class="doc-title-2">
     Props
+    <span class="docs-markdown-h3" id="props">
+      <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
     To get a customized checkbox, just set
@@ -57,7 +63,9 @@
   </table>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    Best Practice
+    Best Practices
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
   <div class="doc-desc-2">
@@ -76,39 +84,40 @@
 
   <div class="doc-title-2">
     Usage & Content guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
   <div class="doc-desc-2">
     Choice chips shouldn’t present only a single option.
   </div>
   <div style="margin-bottom:24px">
-    <img class="checkbox-usage"
-         src="assets/img/doc/chip-list-do.png"
-         alt="">
-    <img class="checkbox-usage"
-         src="assets/img/doc/chip-list-dont.png"
-         alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="304" height="32" src="assets/img/doc/chip-list-do.png" alt="">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="100" height="32" src="assets/img/doc/chip-list-dont.png" alt="">
+    </div>
   </div>
   <div class="doc-desc-2">
     Horizontal placement of choice chips. Choice chips can wrap to a new row. However, using two or more rows of choice chips
     can make each chip harder to scan.
   </div>
   <div style="margin-bottom:24px">
-    <img src="assets/img/doc/chip-horizatal-do.png"
-         class="guideline-pic-w100"
-         alt="">
-    <img src="assets/img/doc/chip-horizatal-dont.png"
-         class="guideline-pic-w100"
-         style="margin-top:24px"
-         alt="">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
+      <img width="432" height="32" src="assets/img/doc/chip-horizatal-do.png" alt="">
+    </div>
+    <div class="docs-usage-warn docs-usage-w100 docs-usage-center docs-mt24" style="height:160px">
+      <img width="256" height="76" src="assets/img/doc/chip-horizatal-dont.png" alt="">
+    </div>
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Design specs
+    <span class="docs-markdown-h3" id="design_specs">
+      <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <img class="doc-spec"
-       src="assets/img/doc/chip-spec.png"
-       alt="">
+  <img class="doc-spec" src="assets/img/doc/chip-spec.png" alt="">
 
 
   <div class="doc-divider">
