--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -6,6 +6,8 @@
 <body>
   <div class="doc-category-title">
     Form Controls
+    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
     Datepicker
@@ -16,6 +18,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Example
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
     Use in forms to let user enter a date or date range.
@@ -27,6 +31,8 @@
   </div>
   <div class="doc-title-2">
     Props
+    <span class="docs-markdown-h3" id="props">
+      <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
     To get a customized checkbox, just set
@@ -59,6 +65,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practice
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
   <div class="doc-desc-2">
@@ -74,26 +82,28 @@
 
   <div class="doc-title-2">
     Usage & Content guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
   <div class="doc-desc-2">
     Always disable the date that user cannot interact with.
   </div>
   <div style="margin-bottom:24px">
-    <img class="datepicker-usage"
-         src="assets/img/doc/datepicker-disable-do.png"
-         alt="">
-    <img class="datepicker-usage"
-         src="assets/img/doc/datepicker-disable-dont.png"
-         alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:291px">
+      <img src="assets/img/doc/datepicker-disable-do.png" alt="" style="height:227px;width:280px">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:291px">
+      <img src="assets/img/doc/datepicker-disable-dont.png" alt="" style="height:227px;width:280px">
+    </div>
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Design specs
+    <span class="docs-markdown-h3" id="design_specs">
+      <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <img class="datepicker-spec"
-       src="assets/img/doc/datepicker-spec.png"
-       alt="">
+  <img class="doc-spec" src="assets/img/doc/datepicker-spec.png" alt="" style="height:635px">
 
 
   <div class="doc-divider">
