--- a/src/assets/documents/components/expansionpanel.html
+++ b/src/assets/documents/components/expansionpanel.html
@@ -63,7 +63,7 @@
   </table>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    Best Practice
+    Best Practices
     <span class="docs-markdown-h3" id="best_practices">
       <span header-link="best_practices"></span>Best Practices</span>
   </div>
