--- a/src/assets/documents/components/badge.html
+++ b/src/assets/documents/components/badge.html
@@ -5,6 +5,8 @@
 <body>
   <div class="doc-category-title">
     Button & Indicatiors
+    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
     Badge
@@ -15,7 +17,9 @@
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    Example
+    examples
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
     Examples of badges containing text, using primary and secondary colors. The badge is applied to its children.
@@ -27,6 +31,8 @@
   </div>
   <div class="doc-title-2">
     Props
+    <span class="docs-markdown-h3" id="props">
+      <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
     To get a customized checkbox, just set
@@ -58,7 +64,9 @@
   </table>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    Best Practice
+    Best Practices
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
   <div class="doc-desc-2">
@@ -76,50 +84,50 @@
 
   <div class="doc-title-2">
     Usage & Content guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
   <div class="doc-desc-2">
     Badge should not block the over elements it support. Bagde should always stay on top and on the right of the main elements.
   </div>
   <div style="margin-bottom:24px">
-    <img class="checkbox-usage"
-         src="assets/img/doc/badge-pic-1.png"
-         alt="">
-    <img class="checkbox-usage"
-         src="assets/img/doc/badge-pic-2.png"
-         alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/badge-pic-1.png" alt="" style="height:49px;width:90px">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/badge-pic-2.png" alt="" style="height:36px;width:90px">
+    </div>
   </div>
   <div class="doc-desc-2">
     Do not add shadow to the badge.
   </div>
   <div style="margin-bottom:24px">
-    <img src="assets/img/doc/badge-pic-3.png"
-         class="checkbox-usage"
-         alt="">
-    <img src="assets/img/doc/badge-pic-4.png"
-         class="checkbox-usage"
-         style="margin-left:24px"
-         alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/badge-pic-3.png" alt="" style="height:36px;width:36px">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/badge-pic-4.png" alt="" style="height:36px;width:36p">
+    </div>
   </div>
   <div class="doc-desc-2">
     Do not use the same color as the main elements.
   </div>
   <div style="margin-bottom:24px">
-    <img src="assets/img/doc/badge-pic-5.png"
-         class="checkbox-usage"
-         alt="">
-    <img src="assets/img/doc/badge-pic-6.png"
-         class="checkbox-usage"
-         style="margin-left:24px"
-         alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/badge-pic-5.png" alt="" style="height:49px;width:90px">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/badge-pic-6.png" alt="" style="height:49px;width:90px">
+    </div>
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Design specs
+    <span class="docs-markdown-h3" id="design_specs">
+      <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <img class="doc-spec"
-       src="assets/img/doc/badge-spec.png"
-       alt="">
+  <img class="doc-spec" src="assets/img/doc/badge-spec.png" alt="">
 
 
   <div class="doc-divider">
