--- a/src/assets/documents/components/formfield.html
+++ b/src/assets/documents/components/formfield.html
@@ -3,8 +3,119 @@
 <head></head>
 
 <body>
-	<h1>Form field</h1>
-	<div app-docs-example="form-field-basic"></div>
+  <div class="doc-category-title">
+    Form Controls
+    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
+  </div>
+  <div class="doc-title-1">
+    Form Field
+  </div>
+  <div class="doc-desc-1">
+    Text fields let users enter and edit text.
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Examples
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
+  </div>
+  <div class="doc-desc-2">
+    Text fields allow users to enter text into a UI. They typically appear in forms and dialogs.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="form-field-basic"></div>
+  </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Props
+    <span class="docs-markdown-h3" id="props">
+      <span header-link="props"></span>Props</span>
+  </div>
+  <div class="doc-desc-2">
+    To get a customized checkbox, just set
+    <span class="doc-desc-2-highlight">type/state/disabled</span>
+  </div>
+  <table class="doc-props-table">
+    <thead>
+      <tr>
+        <th>property</th>
+        <th>description</th>
+        <th>type</th>
+        <th>default</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>onPressEnter</td>
+        <td>The callback function that is triggered when Enter key is pressed.</td>
+        <td>function(e)</td>
+        <td>false</td>
+      </tr>
+      <tr>
+        <td>disabled</td>
+        <td>disabled state of form field</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Best Practice
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
+  </div>
+
+  <div class="doc-desc-2">
+    Form field should:
+    <ul class="doc-list">
+      <li>Be clearly labeled so it’s obvious to the users what they should enter into the field</li>
+      <li>Only ask for information that’s really needed</li>
+      <li>Validate input as soon as user has finished interacting with a field</li>
+    </ul>
+  </div>
+
+  <div class="doc-divider"></div>
+
+  <div class="doc-title-2">
+    Usage & Content guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content guidelines</span>
+  </div>
+  <div class="doc-desc-2">
+    Label text should be short, clear, and fully visible. It shouldn’t be truncated.
+  </div>
+  <div style="margin-bottom:24px">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/formfield-pic-1.png" alt="" style="height:48px;width:200px">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/formfield-pic-2.png" alt="" style="height:48px;width:200px">
+    </div>
+  </div>
+  <div class="doc-desc-2">
+    Label text shouldn’t take up multiple lines.
+  </div>
+  <div style="margin-bottom:24px">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/formfield-pic-3.png" alt="" style="height:48px;width:200px">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img src="assets/img/doc/formfield-pic-4.png" alt="" style="height:48px;width:200px">
+    </div>
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Design specs
+    <span class="docs-markdown-h3" id="design_specs">
+      <span header-link="design_specs"></span>Design specs</span>
+  </div>
+
+  <img class="doc-spec" src="assets/img/doc/formfield-spec.png" alt="">
+
+  <div class="doc-divider"></div>
 </body>
 
 </html>
