--- a/src/assets/documents/components/icon.html
+++ b/src/assets/documents/components/icon.html
@@ -1,4 +1,134 @@
-<html><head></head><body>
-  <h1>Icon</h1>
-  <div app-docs-example="icon-basic"></div>
-</body></html>
+<html>
+
+<head></head>
+
+<body>
+  <div class="doc-category-title">
+    Button & Indicatiors
+    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
+  </div>
+  <div class="doc-title-1">
+    Icon
+  </div>
+  <div class="doc-desc-1">
+    The approved icon set is a typeface called Material Icon Font, which provides flexible, scalable vector icons that can be
+    plugged into any application without taxing the browser with a multitude of icon images.
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Examples
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
+  </div>
+  <div class="doc-desc-2">
+    For web projects, the best format is icon web font.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="icon-basic"></div>
+  </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Props
+    <span class="docs-markdown-h3" id="props">
+      <span header-link="props"></span>Props</span>
+  </div>
+  <div class="doc-desc-2">
+    To get a customized checkbox, just set
+    <span class="doc-desc-2-highlight">type/state/disabled</span>
+  </div>
+  <table class="doc-props-table">
+    <thead>
+      <tr>
+        <th>property</th>
+        <th>description</th>
+        <th>type</th>
+        <th>default</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>ghost</td>
+        <td>make background transparent and invert text and border colors</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+      <tr>
+        <td>disabled</td>
+        <td>disabled state of button</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Best Practice
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
+  </div>
+
+  <div class="doc-desc-2">
+    System icons are designed to be simple, modern, friendly, and sometimes quirky. Each icon is reduced to its minimal form,
+    expressing essential characteristics.
+    <ul class="doc-list">
+      <li>They have a symmetrical and consistent look, ensuring readability and clarity, even at small sizes.</li>
+      <li>System icons are displayed as 24 x 24 dp. Create icons for viewing at 100% scale for pixel-perfect accuracy.</li>
+
+    </ul>
+  </div>
+
+  <div class="doc-divider"></div>
+
+  <div class="doc-title-2">
+    Usage & Content guidelines
+    <span class="docs-markdown-h3" id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content guidelines</span>
+  </div>
+  <div class="doc-desc-2">
+    Make icons graphic and bold. Don’t use delicate, thin stroke weights.
+  </div>
+  <div style="margin-bottom:24px">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="24" height="24" src="assets/img/doc/icon-pic-1.png" alt="">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="24" height="24" src="assets/img/doc/icon-pic-2.png" alt="">
+    </div>
+  </div>
+  <div class="doc-desc-2">
+    Use geometric, consistent shapes. Don’t use gestural or loose organic shapes.
+  </div>
+  <div style="margin-bottom:24px">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="24" height="24" src="assets/img/doc/icon-pic-3.png" alt="">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="24" height="24" src="assets/img/doc/icon-pic-4.png" alt="">
+    </div>
+  </div>
+  <div class="doc-desc-2">
+    Use consistent stroke weights and squared stroke terminals. Don’t use inconsistent stroke weights or rounded stroke terminals.
+  </div>
+  <div style="margin-bottom:24px">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="24" height="24" src="assets/img/doc/icon-pic-5.png" alt="">
+    </div>
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
+      <img width="24" height="24" src="assets/img/doc/icon-pic-6.png" alt="">
+    </div>
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Design specs
+    <span class="docs-markdown-h3" id="design_specs">
+      <span header-link="design_specs"></span>Design specs</span>
+  </div>
+
+  <img class="doc-spec" width="24" height="24" src="assets/img/doc/icon-pic-7.png" alt="">
+
+  <div class="doc-divider"></div>
+</body>
+
+</html>
