--- a/src/document.scss
+++ b/src/document.scss
@@ -133,10 +133,17 @@
 }
 .docs-usage-center {
   img {
+    max-height: 100%;
+    max-width: 100%;
+    width: auto;
+    height: auto;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    transform: scale(.5);
   }
 }
 .docs-usage-do {
