1. update design spec resposive

--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -98,10 +98,10 @@
   </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img height="36px" width="149px" src="assets/img/doc/button-predicable-do.png" alt="">
+      <img src="assets/img/doc/button-predicable-do.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img height="36px" width="73px" src="assets/img/doc/button-predicable-dont.png" alt="">
+      <img src="assets/img/doc/button-predicable-dont.png" alt="">
     </div>
   </div>
   <div class="doc-desc-2">
@@ -109,10 +109,10 @@
   </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img width="149px" height="36px" src="assets/img/doc/button-singleline-do.png" alt="">
+      <img src="assets/img/doc/button-singleline-do.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img width="104px" height="54px" src="assets/img/doc/button-singleline-dont.png" alt="">
+      <img src="assets/img/doc/button-singleline-dont.png" alt="">
     </div>
   </div>
   <div class="doc-divider"></div>
