--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -90,10 +90,10 @@
 
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img width="130" height="40" src="assets/img/doc/checkbox-capital-ok.png" alt="">
+      <img src="assets/img/doc/checkbox-capital-ok.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img width="120" height="40" src="assets/img/doc/checkbox-capital-fail.png" alt="">
+      <img src="assets/img/doc/checkbox-capital-fail.png" alt="">
     </div>
   </div>
 
@@ -120,8 +120,12 @@
     <span class="docs-markdown-h3" id="design_specs"><span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <img class="doc-spec" src="assets/img/doc/checkbox-design.svg"
-       alt="">
+
+  <div class="docs-usage-spec docs-usage-center" style="height:280px">
+    <img src="assets/img/doc/checkbox-design.png"
+    alt="">
+  </div>
+  
 
 
   <div class="doc-divider">
