1. update component spec css

--- a/src/assets/documents/components/badge.html
+++ b/src/assets/documents/components/badge.html
@@ -103,10 +103,10 @@
   </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-pic-3.png" alt="" style="height:36px;width:36px">
+      <img src="assets/img/doc/badge-pic-3.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-pic-4.png" alt="" style="height:36px;width:36p">
+      <img src="assets/img/doc/badge-pic-4.png" alt="">
     </div>
   </div>
   <div class="doc-desc-2">
@@ -114,10 +114,10 @@
   </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-pic-5.png" alt="" style="height:49px;width:90px">
+      <img src="assets/img/doc/badge-pic-5.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-pic-6.png" alt="" style="height:49px;width:90px">
+      <img src="assets/img/doc/badge-pic-6.png" alt="">
     </div>
   </div>
   <div class="doc-divider"></div>
@@ -127,8 +127,10 @@
       <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <img class="doc-spec" src="assets/img/doc/badge-spec.png" alt="">
-
+  <div class="docs-usage-spec docs-usage-center" style="height:280px">
+    <img src="assets/img/doc/badge-spec.png"
+    alt="">
+  </div>
 
   <div class="doc-divider">
 
