--- a/src/assets/documents/components/chip.html
+++ b/src/assets/documents/components/chip.html
@@ -117,8 +117,11 @@
       <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <img class="doc-spec" src="assets/img/doc/chip-spec.png" alt="">
-
+  
+  <div class="docs-usage-spec docs-usage-center" style="height:280px">
+    <img src="assets/img/doc/chip-spec.png"
+    alt="">
+  </div>
 
   <div class="doc-divider">
 
