--- a/src/assets/documents/components/expansionpanel.html
+++ b/src/assets/documents/components/expansionpanel.html
@@ -96,12 +96,12 @@
   <div style="margin-bottom:24px">
     <div class="docs-usage-do">
       <div style="width: 100%; height: 352px" class="docs-usage-center">
-        <img style="width: 432px; height: 230px" class="expansionpanel-usage" src="assets/img/doc/expansionpanel-pic-1.png" alt="">
+        <img  class="expansionpanel-usage" src="assets/img/doc/expansionpanel-pic-1.png" alt="">
       </div>
     </div>
     <div class="docs-usage-dont docs-mt16" >
         <div style="width: 100%; height: 352px" class="docs-usage-center">
-          <img style="width: 432px; height: 230px" class="expansionpanel-usage" src="assets/img/doc/expansionpanel-pic-2.png" alt="">
+          <img  class="expansionpanel-usage" src="assets/img/doc/expansionpanel-pic-2.png" alt="">
         </div>
       </div>
 
@@ -113,8 +113,11 @@
       <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <img class="doc-spec" src="assets/img/doc/expansionpanel-spec.png" alt="">
-
+  
+  <div class="docs-usage-spec docs-usage-center" style="height:369px">
+    <img src="assets/img/doc/expansionpanel-spec.png"
+    alt="">
+  </div>
   <div class="doc-divider"></div>
 </body>
 
