--- a/src/assets/documents/components/icon.html
+++ b/src/assets/documents/components/icon.html
@@ -91,10 +91,10 @@
   </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img width="24" height="24" src="assets/img/doc/icon-pic-1.png" alt="">
+      <img  src="assets/img/doc/icon-pic-1.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img width="24" height="24" src="assets/img/doc/icon-pic-2.png" alt="">
+      <img  src="assets/img/doc/icon-pic-2.png" alt="">
     </div>
   </div>
   <div class="doc-desc-2">
@@ -102,10 +102,10 @@
   </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img width="24" height="24" src="assets/img/doc/icon-pic-3.png" alt="">
+      <img  src="assets/img/doc/icon-pic-3.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img width="24" height="24" src="assets/img/doc/icon-pic-4.png" alt="">
+      <img  src="assets/img/doc/icon-pic-4.png" alt="">
     </div>
   </div>
   <div class="doc-desc-2">
@@ -113,10 +113,10 @@
   </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img width="24" height="24" src="assets/img/doc/icon-pic-5.png" alt="">
+      <img  src="assets/img/doc/icon-pic-5.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img width="24" height="24" src="assets/img/doc/icon-pic-6.png" alt="">
+      <img  src="assets/img/doc/icon-pic-6.png" alt="">
     </div>
   </div>
   <div class="doc-divider"></div>
@@ -126,8 +126,10 @@
       <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <img class="doc-spec" width="24" height="24" src="assets/img/doc/icon-pic-7.png" alt="">
-
+  <div class="docs-usage-spec docs-usage-center" style="height:280px">
+    <img src="assets/img/doc/icon-pic-7.png"
+    alt="">
+  </div>
   <div class="doc-divider"></div>
 </body>
 
