--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -122,8 +122,9 @@
       <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <img class="doc-spec" src="assets/img/doc/button-spec.png" alt="">
-
+  <div class="docs-usage-spec docs-usage-center" style="height:280px">
+    <img src="assets/img/doc/button-spec.png" alt="">
+  </div>
 
   <div class="doc-divider">
 
