--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -103,8 +103,10 @@
       <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <img class="doc-spec" src="assets/img/doc/datepicker-spec.png" alt="" style="height:635px">
-
+  <div class="docs-usage-spec docs-usage-center" style="height:635px">
+    <img src="assets/img/doc/datepicker-spec.png"
+    alt="">
+  </div>
 
   <div class="doc-divider">
 
