--- a/src/assets/documents/components/formfield.html
+++ b/src/assets/documents/components/formfield.html
@@ -89,10 +89,10 @@
   </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/formfield-pic-1.png" alt="" style="height:48px;width:200px">
+      <img src="assets/img/doc/formfield-pic-1.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/formfield-pic-2.png" alt="" style="height:48px;width:200px">
+      <img src="assets/img/doc/formfield-pic-2.png" alt="">
     </div>
   </div>
   <div class="doc-desc-2">
@@ -100,10 +100,10 @@
   </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/formfield-pic-3.png" alt="" style="height:48px;width:200px">
+      <img src="assets/img/doc/formfield-pic-3.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/formfield-pic-4.png" alt="" style="height:48px;width:200px">
+      <img src="assets/img/doc/formfield-pic-4.png" alt="">
     </div>
   </div>
   <div class="doc-divider"></div>
@@ -113,8 +113,11 @@
       <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <img class="doc-spec" src="assets/img/doc/formfield-spec.png" alt="">
-
+  
+  <div class="docs-usage-spec docs-usage-center" style="height:280px">
+    <img src="assets/img/doc/formfield-spec.png"
+    alt="">
+  </div>
   <div class="doc-divider"></div>
 </body>
 
