--- a/src/assets/documents/components/badge.html
+++ b/src/assets/documents/components/badge.html
@@ -92,10 +92,10 @@
   </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-pic-1.png" alt="" style="height:49px;width:90px">
+      <img src="assets/img/doc/badge-pic-1.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-pic-2.png" alt="" style="height:36px;width:90px">
+      <img src="assets/img/doc/badge-pic-2.png" alt="">
     </div>
   </div>
   <div class="doc-desc-2">
