--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -90,10 +90,10 @@
   </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:291px">
-      <img src="assets/img/doc/datepicker-disable-do.png" alt="" style="height:227px;width:280px">
+      <img src="assets/img/doc/datepicker-disable-do.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:291px">
-      <img src="assets/img/doc/datepicker-disable-dont.png" alt="" style="height:227px;width:280px">
+      <img src="assets/img/doc/datepicker-disable-dont.png" alt="">
     </div>
   </div>
   <div class="doc-divider"></div>
