--- a/src/document.scss
+++ b/src/document.scss
@@ -133,7 +133,7 @@
 }
 .docs-usage-center {
   img {
-    max-height: 100%;
+    // max-height: 100%;
     max-width: 100%;
     width: auto;
     height: auto;
