--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -35,8 +35,8 @@
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
-    To get a customized checkbox, just set
-    <span class="doc-desc-2-highlight">type/state/disabled</span>
+    To get a customized button, just set
+    <span class="doc-desc-2-highlight">color/disabled</span>
   </div>
   <table class="doc-props-table">
     <thead>
@@ -49,10 +49,10 @@
     </thead>
     <tbody>
       <tr>
-        <td>ghost</td>
-        <td>make background transparent and invert text and border colors</td>
-        <td>boolean</td>
-        <td>false</td>
+        <td>color</td>
+        <td>Theme color palette for the component.</td>
+        <td>string</td>
+        <td>primary</td>
       </tr>
       <tr>
         <td>disabled</td>
