--- a/src/assets/examples/button-basic/button-basic.component.html
+++ b/src/assets/examples/button-basic/button-basic.component.html
@@ -1,4 +1,4 @@
-<button mat-raised-button color="primary">primary</button>
-<button mat-stroked-button color="primary">stroked</button>
-<button mat-button color="primary">default</button>
+<button mat-raised-button color="primary">Primary</button>
+<button mat-stroked-button color="primary">Secondary</button>
+<button mat-button color="primary">Text Button</button>
 
