--- a/src/assets/examples/button-basic/button-basic.component.scss
+++ b/src/assets/examples/button-basic/button-basic.component.scss
@@ -1,5 +1,8 @@
 :host {
-    .mat-stroked-button {
-      border: 1px solid #F1F1F1;
-    }
+  // .mat-stroked-button {
+  //   border: 1px solid #F1F1F1;
+  // }
+  button {
+    margin: 0 10px;
   }
+}
