--- a/src/styles/material-dark.scss
+++ b/src/styles/material-dark.scss
@@ -45,17 +45,21 @@ Orginal Style from https://github.com/Kelbster/highlightjs-material-dark-theme  
   color: #75A5FF;
 }
 .hljs-tag {
-  color: #ce93d8;
+  // color: #ce93d8;
+  color: #696969;
 }
 .hljs-name {
-  color: #4dd0e1;
+  // color: #4dd0e1;
+  color: #008DFF;
 }
 .hljs-type {
-  color: #da4939;
+  // color: #da4939;
+  color: #F81D22;
 }
 
 .hljs-attribute {
-  color: #80CBBF;
+  // color: #80CBBF;
+  color: #0B8235;
 }
 
 .hljs-symbol,
