--- a/src/app/pages/component-viewer/component-viewer.html
+++ b/src/app/pages/component-viewer/component-viewer.html
@@ -3,4 +3,4 @@
     <router-outlet></router-outlet>
   </div>
 </div>
-<table-of-contents #toc container=".documentation-main"></table-of-contents>
+<table-of-contents #toc container=".documentation-main" *ngIf="showToc | async"></table-of-contents>
