--- a/src/document.scss
+++ b/src/document.scss
@@ -53,7 +53,7 @@
 .doc-desc-2-highlight {
   /* Rectangle: */
   background: #f3f3f3;
-  padding-right: 44px;
+  // padding-right: 44px;
 }
 .doc-example-container {
   /* Rectangle 3: */
