--- a/src/styles/material-dark.scss
+++ b/src/styles/material-dark.scss
@@ -52,7 +52,7 @@ Orginal Style from https://github.com/Kelbster/highlightjs-material-dark-theme  
   // color: #4dd0e1;
   color: #008DFF;
 }
-.hljs-type {
+.hljs-type, .hljs-attr {
   // color: #da4939;
   color: #F81D22;
 }
