--- a/src/assets/documents/components/badge.html
+++ b/src/assets/documents/components/badge.html
@@ -35,8 +35,8 @@
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
-    To get a customized checkbox, just set
-    <span class="doc-desc-2-highlight">type/state/disabled</span>
+    To get a customized badge, just set
+    <span class="doc-desc-2-highlight">color/matBadgeHidden/matBadgeOverlap/matBadgePosition/matBadgeSize</span>
   </div>
   <table class="doc-props-table">
     <thead>
@@ -49,16 +49,34 @@
     </thead>
     <tbody>
       <tr>
-        <td>ghost</td>
-        <td>make background transparent and invert text and border colors</td>
+        <td>color</td>
+        <td>The color of the badge. Can be primary, accent, or warn.</td>
+        <td>string</td>
+        <td>primary</td>
+      </tr>
+      <tr>
+        <td>matBadgeHidden</td>
+        <td>Whether the badge is hidden.</td>
         <td>boolean</td>
         <td>false</td>
       </tr>
       <tr>
-        <td>disabled</td>
-        <td>disabled state of button</td>
+        <td>matBadgeOverlap</td>
+        <td>Whether the badge should overlap its contents or not.</td>
         <td>boolean</td>
-        <td>false</td>
+        <td>true</td>
+      </tr>
+      <tr>
+        <td>matBadgePosition</td>
+        <td>Position the badge should reside. Accepts any combination of 'above'|'below' and 'before'|'after'</td>
+        <td>string</td>
+        <td>above after</td>
+      </tr>
+      <tr>
+        <td>matBadgeSize</td>
+        <td>Size of the badge. Can be 'small', 'medium', or 'large'.</td>
+        <td>string</td>
+        <td>medium</td>
       </tr>
     </tbody>
   </table>
