--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -35,8 +35,8 @@
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
-    To get a customized checkbox, just set
-    <span class="doc-desc-2-highlight">type/state/disabled</span>
+    To get a customized datepicker, just set
+    <span class="doc-desc-2-highlight">date/onApply</span>
   </div>
   <table class="doc-props-table">
     <thead>
@@ -49,16 +49,16 @@
     </thead>
     <tbody>
       <tr>
-        <td>checked</td>
-        <td>Specifies whether the checkbox is selected</td>
-        <td>boolean</td>
-        <td>false</td>
+        <td>date</td>
+        <td>Specifies the binded date</td>
+        <td>Date</td>
+        <td>Null</td>
       </tr>
       <tr>
-        <td>disabled</td>
-        <td>disabled state of checkbox</td>
-        <td>boolean</td>
-        <td>false</td>
+        <td>onApply</td>
+        <td>Specifies the callback clicking 'Apply' button</td>
+        <td>function</td>
+        <td>undefined</td>
       </tr>
     </tbody>
   </table>
