--- a/src/styles/material-dark.scss
+++ b/src/styles/material-dark.scss
@@ -71,7 +71,8 @@ Orginal Style from https://github.com/Kelbster/highlightjs-material-dark-theme  
 }
 
 .hljs-params {
-  color: #EEFFF7;
+  // color: #EEFFF7;
+  color: #0B8235;
 }
 
 
