--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -57,6 +57,12 @@
         <td>boolean</td>
         <td>false</td>
       </tr>
+      <tr>
+        <td>indeterminate</td>
+        <td>Whether the checkbox is indeterminate</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
     </tbody>
   </table>
   <div class="doc-divider"></div>
